--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 
                             <div class="hero-tag G-align-center">
                                 <i class="icon icon-tag3"></i>
-                                <p>Передовая нейросеть</p>
+                                <p>Бесплатная регистрация</p>
                             </div>
                         </div>
 
@@ -734,14 +734,19 @@
 
 
 
+
+
                             <div class="possibilities-decor-for G-flex">
                                 <img src="assets/images/possibilitiesDecor4.webp" alt="">
+                            </div>
+                            <div class="possibilities-star G-flex">
+                                <img src="assets/images/possibilitiesStar.webp" alt="">
                             </div>
 
                             <div class="possibilities-clue">
                                 <p>
-                                    Фрилансить с такой нейросетью — одно удовольствие! Проверено, доказано
-                                    и подтверждено
+                                    Фрилансить с такой нейросетью — одно удовольствие!  Проверено,  доказано
+                                    и подтверждено
                                 </p>
                                 <div class="possibilities-clue-icon G-flex">
                                     <img src="assets/images/taskArrow.svg" alt="">
