--- a/index.html
+++ b/index.html
@@ -1675,7 +1675,7 @@
             </div>
 
             <div class="page-decor-mobile G-flex">
-                <img src="assets/images/pageDecorMobile.webp" alt="">
+                <img src="assets/images/pageDecorMobile.svg" alt="">
             </div>
         </section>
         
