--- a/index.html
+++ b/index.html
@@ -600,8 +600,8 @@
                         </div>
                         <div class="task-video-block task-video-mobile G-align-center">
                             <div class="any-task-video  G-center">
-                                <video autoplay muted loop>
-                                    <source src="./assets/video/volchek.mp4" type="video/webm">
+                                <video autoplay muted loop playsinline>
+                                    <source src="./assets/video/volchek.mp4" type="video/mp4">
                                 </video>
                             </div>
                             <div class="task-video-texts">
@@ -830,8 +830,9 @@
 
                         <div class="possibilities-video-column">
                             <div class="timer-video G-center">
-                                <video autoplay muted loop>
-                                    <source src="./assets/video/timer.mp4" type="video/webm">
+                                <video autoplay muted loop playsinline>
+                                    <source src="./assets/video/timer.mp4" type="video/mp4">
+
                                 </video>
                             </div>
 
