--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                         </div>
                         <div class="task-video-block task-video-mobile G-align-center">
                             <div class="any-task-video  G-center">
-                                <video autoplay muted loop playsinline>
+                                <video autoplay muted loop >
                                     <source src="./assets/video/volchek.mp4" type="video/mp4">
                                 </video>
                             </div>
