--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </ul>
 
                     <div class="header-mobile-actions  ">
-                        <button class="btn-login btn-black ">Вход</button>
+                        <button class="btn-login  ">Вход</button>
                         <button class="btn-register btn-white ">Регистрация</button>
                     </div>
 
@@ -622,6 +622,10 @@
                         <img src="assets/images/anyTaskDecor.webp" alt="">
                     </div>
 
+                    <div class="decor-animation  task-decor--one"></div>
+
+                    <div class="decor-animation  task-decor--two"></div>
+
                     <div class="task-decor-two G-flex">
                         <img class="img-desktop" src="assets/images/anyTaskDecor2.webp" alt="">
                         <img class="img-mobile" src="assets/images/anyTaskDecor2Mobile.webp" alt="">
@@ -851,8 +855,11 @@
                         <img class="img-desktop" src="assets/images/possibilitiesDecor5.webp" alt="">
                         <img class="img-mobile" src="assets/images/possibilitiesDecor5Mobile.webp" alt="">
 
-
                     </div>
+
+                    <div class="decor-animation possibilities-animation--one"></div>
+                    <div class="decor-animation possibilities-animation--two"></div>
+
                     <div class="possibilities-decor-six G-flex">
                         <img class="img-desktop" src="assets/images/possibilitiesDecor6.webp" alt="">
                         <img class="img-mobile" src="assets/images/possibilitiesDecor6Mobile.webp" alt="">
@@ -860,11 +867,15 @@
 
 
                     </div>
+                    <div class="decor-animation possibilities-animation--tree"></div>
+                    <div class="decor-animation possibilities-animation--for"></div>
+
                     <div class="possibilities-decor-seven G-flex">
                         <img class="img-desktop" src="assets/images/possibilitiesDecor7.webp" alt="">
                         <img class="img-mobile" src="assets/images/possibilitiesDecor7Mobile.webp" alt="">
 
                     </div>
+                    <div class="decor-animation possibilities-animation--five"></div>
 
                     <div class="possibilities-decor-mobile G-flex">
                         <img src="assets/images/possibilitiesDecorMobile.webp" alt="">
@@ -981,6 +992,10 @@
                             <img class="img-mobile" src="assets/images/workDecorTwoMobile.webp" alt="">
 
                         </div>
+
+                        <div class="decor-animation work-animation--one"></div>
+
+                        <div class="decor-animation work-animation--two"></div>
 
                         <div class="work-decor-mobile G-flex">
                             <img  src="assets/images/workDecorMobile.webp" alt="">
@@ -1443,6 +1458,10 @@
                     </div>
 
 
+                    <div class="decor-animation  reviews-decor--one"></div>
+                    <div class="decor-animation  reviews-decor--two"></div>
+
+
                 </div>
             </div>
         </section>
@@ -1581,6 +1600,9 @@
                     <div class="faq-decor G-flex">
                         <img src="assets/images/faqDecor.webp" alt="">
                     </div>
+
+                    <div class="decor-animation  faq-decor--one"></div>
+
                 </div>
 
             </div>
@@ -1630,6 +1652,12 @@
                         <img class="img-mobile" src="assets/images/trustDecor2Mobile.webp" alt="">
 
                     </div>
+
+                    <div class="decor-animation  trust-decor--one"></div>
+                    <div class="decor-animation  trust-decor--two"></div>
+
+
+
                     <div class="trust-decor-tree G-flex">
                         <img class="img-desktop" src="assets/images/trustDecor3.webp" alt="">
                         <img class="img-mobile" src="assets/images/trustDecor3Mobile.webp" alt="">
