--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
                     </ul>
 
                     <div class="header-mobile-actions  ">
-                        <button class="btn-login  ">Вход</button>
-                        <button class="btn-register btn-white ">Регистрация</button>
+                        <button class="btn-login  G-center">Вход</button>
+                        <button class="btn-register G-center btn-white ">Регистрация</button>
                     </div>
 
                 </nav>
                 <div class="header-actions G-align-center">
-                    <button class="btn-login">Вход</button>
-                    <button class="btn-register">Регистрация</button>
+                    <button class="btn-login G-center">Вход</button>
+                    <button class="btn-register G-center">Регистрация</button>
                 </div>
 
                 <div class="burger">
